methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:1: error: not found: value vuBiscuit
def haveBaggle():Boolean = {var vuBiscuit()=false;for (k<-1 to 6) {if (estSurBiscuit()) {vuBiscuit()=true};for (i<- 1 to 6) {recule()}
                                ^MethodsReturning:1: error: not found: value vuBiscuit
def haveBaggle():Boolean = {var vuBiscuit()=false;for (k<-1 to 6) {if (estSurBiscuit()) {vuBiscuit()=true};for (i<- 1 to 6) {recule()}
                                                                                         ^MethodsReturning:1: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {var vuBiscuit()=false;for (k<-1 to 6) {if (estSurBiscuit()) {vuBiscuit()=true};for (i<- 1 to 6) {recule()}
                                                        ^